syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sdfs.protocol";
option java_outer_classname ="SDFSProtocol";

package sdfs;

service NameNodeService {
    rpc CreateFile (CreateFileRequest) returns (CreateFileResponse);
    rpc sendHeartBeat (HeartBeatRequest) returns (HeartBeatResponse);
}

message CreateFileRequest {
    string fileName = 1;
    string owner_id = 2;
    int64 file_size = 3;
}


message CreateFileResponse{
    string file_id = 1;
    BlockLocation block = 2;
    string error_message = 3;
    bool success = 4;
}

message BlockLocation{
    string block_id = 1;
    string hostname = 2;
    int32 port = 3;
    int64 block_sequence = 4;
}

message HeartBeatRequest{
    string datanode_id = 1;
    string address = 2;
    int32 port = 3;
    int64 free_space = 4;
}

message HeartBeatResponse{
    bool success = 1;
    repeated string commands = 2; 
}
